adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at aliquid ab sint corporis, debitis magni accusamus sit temporibus. Nulla perspiciatis veritatis placeat. Deleniti animi omnis enim asperiores pariatur atque?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vitae soluta nesciunt temporibus facere ullam et voluptatum, est esse saepe, maiores eaque veniam necessitatibus optio aspernatur distinctio beatae, consequatur consequuntur.</p>
 </body>
 </html>
