paragrafo alterado dentro do linux

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -11,5 +11,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit at aliquid ab sint corporis, debitis magni accusamus sit temporibus. Nulla perspiciatis veritatis placeat. Deleniti animi omnis enim asperiores pariatur atque?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vitae soluta nesciunt temporibus facere ullam et voluptatum, est esse saepe, maiores eaque veniam necessitatibus optio aspernatur distinctio beatae, consequatur consequuntur.</p>
+    <p>Esse paragrafo foi adicionado dentro do GitHub Desktop para Linux</p>
 </body>
 </html>
